--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
-    border: 0;
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .wrapper {
@@ -8,6 +9,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 #score {
@@ -21,58 +23,53 @@
     font-size: 30px;
     color: blue;
     cursor: pointer;
-}
-
-.pname {
-    padding-top: 10px;
-    font-size: 18px;
+    top: 20px;
 }
 
 #game {
     width: 500px;
     height: 200px;
     border: 1px solid black;
+    position: relative;
+    overflow: hidden;
+    margin-top: 20px;
 }
 
 #character {
     width: 50px;
     height: 50px;
-    background-image: url(https://e7.pngegg.com/pngimages/726/411/png-clipart-barack-obama-barack-obama.png
-); /* Replace with your image file */
+    background-image: url('https://e7.pngegg.com/pngimages/726/411/png-clipart-barack-obama-barack-obama.png');
     background-size: cover;
-position: relative;
+    position: absolute;
     top: 150px;
+    left: 50px;
 }
 
 .animate {
-    animation: jump 500ms linear;
+    animation: jump 0.5s linear;
 }
 
 #block {
     width: 40px;
     height: 40px;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtjIAQaO2LPZ_HFEk5WchmeTaJuM15XviAHA&s
-); /* Replace with your image file */
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtjIAQaO2LPZ_HFEk5WchmeTaJuM15XviAHA&s');
     background-size: cover;
-    position: relative;
-    top: 110px;
-    left: 460px;
+    position: absolute;
+    top: 160px;
+    left: 480px;
 }
-
-
 
 .blockAnimate {
     animation: block 2s linear infinite;
 }
 
 @keyframes jump {
-    0% {top: 150px}
-    50% {top: 100px}
-    70% {top: 100px}
-    100% {top: 150px}
+    0% { top: 150px; }
+    50% { top: 100px; }
+    100% { top: 150px; }
 }
 
 @keyframes block {
-    0% {left: 480px}
-    100% {left: -20px;}
+    0% { left: 480px; }
+    100% { left: -20px; }
 }
