--- a/style.css
+++ b/style.css
@@ -1,92 +1,85 @@
-/* Reset default spacing */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Container for everything */
 .wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 20px;
-  height: 250px;
+  height: 100vh;
 }
 
-/* Score text */
 #score {
   font-size: 25px;
   font-weight: 500;
-  pointer-events: none;
   margin-bottom: 10px;
 }
 
-/* Game area */
 #game {
   width: 500px;
   height: 200px;
   border: 1px solid black;
-  position: relative; /* important for child positioning */
+  position: relative;
   overflow: hidden;
-  background: #fff;
+  background: white;
 }
 
-/* Player character */
+/* Character settings */
 #character {
   width: 50px;
   height: 50px;
   background-image: url('https://e7.pngegg.com/pngimages/726/411/png-clipart-barack-obama-barack-obama.png');
   background-size: cover;
   position: absolute;
-  top: 150px;
   left: 50px;
+  top: 150px;
 }
 
-/* Block (obstacle) */
+/* Obstacle block */
 #block {
   width: 40px;
   height: 40px;
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtjIAQaO2LPZ_HFEk5WchmeTaJuM15XviAHA&s');
   background-size: cover;
   position: absolute;
-  top: 160px;
   left: 480px;
+  top: 160px;
 }
 
-/* Character jump animation */
+/* Animate character jump */
 .animate {
   animation: jump 0.5s linear;
 }
 
-/* Block movement animation */
+/* Animate block movement */
 .blockAnimate {
   animation: block 2s linear infinite;
 }
 
-/* Message display */
+/* Error/instruction text */
 .error {
   position: absolute;
-  font-size: 30px;
-  color: blue;
-  cursor: pointer;
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
-  white-space: nowrap;
+  font-size: 20px;
+  color: blue;
   z-index: 10;
+  pointer-events: none;
 }
 
-/* Jumping animation */
+/* Jump animation */
 @keyframes jump {
-  0%   { top: 150px; }
-  50%  { top: 100px; }
+  0% { top: 150px; }
+  50% { top: 100px; }
   100% { top: 150px; }
 }
 
-/* Block sliding from right to left */
+/* Block move animation */
 @keyframes block {
-  0%   { left: 480px; }
-  100% { left: -20px; }
+  0% { left: 500px; }
+  100% { left: -40px; }
 }
